--- a/detectors/Dockerfile.hf
+++ b/detectors/Dockerfile.hf
@@ -6,26 +6,19 @@ RUN microdnf update -y && \
     microdnf clean all
 RUN pip install --no-cache-dir torch
 
-# FROM icr.io/fm-stack/ubi9-minimal-py39-torch as builder
 FROM base as builder
 
-COPY ./common/requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
-
-COPY ./huggingface/requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
+RUN pip install --no-cache-dir \
+    guardrails-detector-common \
+    guardrails-detector-huggingface
 
 FROM builder
 
 WORKDIR /app
-ARG CACHEBUST=1
-RUN echo "$CACHEBUST"
-COPY ./common /common
-COPY ./huggingface/app.py /app
-COPY ./huggingface/detector.py /app
-COPY ./huggingface/scheme.py /app
+
+# COPY tests/dummy_models /app/models
+# ENV MODEL_DIR=/app/models/bert/BertForSequenceClassification
 
 EXPOSE 8000
-CMD ["uvicorn", "app:app", "--workers", "4", "--host", "0.0.0.0", "--port", "8000", "--log-config", "/common/log_conf.yaml"]
 
-# gunicorn main:app --workers 4 --worker-class uvicorn.workers.UvicornWorker --bind 0.0.0.0:8000
+CMD ["python", "-m", "uvicorn", "guardrails_detector_huggingface.app:app", "--workers", "4", "--host", "0.0.0.0", "--port", "8000"]
